# cpprestsdk

./: CMakeLists.txt
Build_iOS/: CMakeLists.txt
Release/: CMakeLists.txt
Release/cmake/: cpprest_find_openssl.cmake
Release/include/cpprest/details/: SafeInt3.hpp
cmake/: config.cmake
